--- a/style.css
+++ b/style.css
@@ -1,14 +1,30 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    font-size: 1.6rem;
-    background-color: #040924;
+  font-size: 1.6rem;
+  background-color: #040924;
+}
+
+.container {
+  height: 100vh;
+  display: grid;
+  place-content: center; /* Mantém as props definidas no card e coloca ao centro!*/
+}
+
+.card {
+  border-radius: .6rem;
+  background: #fff;
+  box-shadow: 0 .2rem .4rem 0 rgba(0, 0, 0, 0.1);
+
+  padding: 4.8rem 6.4rem 6.4rem;
+  max-width: 42.8rem;
+  margin-inline: auto; /* Centraliza horizontalmente! */
 }
