--- a/style.css
+++ b/style.css
@@ -6,6 +6,22 @@
 
 :root {
   font-size: 62.5%;
+  font-family: "Roboto", sans-serif;
+
+  /* variáveis de cores: */
+  --tt-heading: #0c3440; /* tt é abreviação de título */
+
+  --tt-label: #00453a;
+  --tt-input: #212529;
+  --ot-input: #02799d; /* ot é abreviação de outline */
+  --bd-input: rgba(73, 80, 87, 0.3); /* bd é abreviação de outline */
+  --tt-placeholder: rgba(73, 80, 87, 0.5);
+
+  --tt-button: #fff;
+  --bg-button: #02799d;
+  
+  --bg-error: #f03e3e;
+  --tt-error: #fff;
 }
 
 body {
@@ -20,11 +36,16 @@ body {
 }
 
 .card {
-  border-radius: .6rem;
+  border-radius: 0.6rem;
   background: #fff;
-  box-shadow: 0 .2rem .4rem 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.2rem 0.4rem 0 rgba(0, 0, 0, 0.1);
 
   padding: 4.8rem 6.4rem 6.4rem;
   max-width: 42.8rem;
   margin-inline: auto; /* Centraliza horizontalmente! */
+}
+
+h1 {
+  font-size: 3.2rem;
+  font-weight: 700;
 }
