--- a/style.css
+++ b/style.css
@@ -20,20 +20,30 @@
 
   --tt-button: #fff;
   --bg-button: #02799d;
+  --bg-button-hover: #035672;
 
   --bg-error: #f03e3e;
   --tt-error: #fff;
 }
 
 body {
-  font-size: 1.6rem;
   background-color: #040924;
+}
+
+/* Forçando as definições tb no input e button*/
+body,
+input,
+button {
+  font-size: 1.6rem;
+  line-height: 2rem;
 }
 
 .container {
   height: 100vh;
   display: grid;
   place-content: center; /* Mantém as props definidas no card e coloca ao centro!*/
+
+  padding: 24rem;
 }
 
 .card {
@@ -51,6 +61,10 @@ body {
   font-size: 3.2rem;
   font-weight: 700;
   line-height: 4rem;
+}
+
+form {
+    width: 30rem;
 }
 
 form label {
@@ -90,4 +104,30 @@ form input::placeholder {
 .input-wrapper + .input-wrapper {
   /* input wrapper precedido por um input-wrapper */
   margin-top: 1.6rem;
+}
+
+button {
+  margin-top: 3.2rem;
+  padding: 1.6rem;
+  width: 100%;
+
+  border-radius: 0.4rem;
+  border: none;
+  background-color: var(--bg-button);
+  color: var(--tt-button);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+
+  font-weight: bold;
+
+  cursor: pointer;
+
+  transition: background .3s;
+}
+
+button:hover {
+  background-color: var(--bg-button-hover);
 }
